--- a/front-web/src/core/components/Footer/styles.scss
+++ b/front-web/src/core/components/Footer/styles.scss
@@ -1,4 +1,39 @@
 .footer-container{
+    margin-top: 361px;
+    color: #000;
     width: 100%;
-    border: 1px solid #000;
+    height: 110px;
+    background: #69C3F0 0% 0% no-repeat padding-box;;
+    display: flex;
+ 
+}
+.footer-icon{
+    width: 100px;
+    height: 100px;
+    text-align: center;   
+    margin-top: 5px;
+    margin-left: 140px;
+    padding-top: 35px;
+   
+}
+
+.p{
+    margin-top: 20px;
+    margin-bottom: 0px;
+    text-align: center;
+    font-style: italic;
+    font-weight: bold;
+    font-size: 16px;
+    letter-spacing: 0px;
+    color: #5399BD;
+}
+.s{
+    text-align: center;
+    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: 0px;
+    color: #FFFFFF;
+    opacity: 1;
+    padding-left: 15px;
+    display: flex;
 }
