--- a/front-web/src/core/components/ButtonMenu/styles.scss
+++ b/front-web/src/core/components/ButtonMenu/styles.scss
@@ -1,8 +1,7 @@
 .btn-menu{
-    top: 25px;
-    left: 1450px;
     width: 192px;
     height: 52px;
+    margin-left: 80px;
     background: var(--unnamed-color-f69c00) 0% 0% no-repeat padding-box;
     background: #F69C00 0% 0% no-repeat padding-box;
     box-shadow: 0px 3px 6px #00000054;
