--- a/front-web/src/core/components/Navbar/styles.scss
+++ b/front-web/src/core/components/Navbar/styles.scss
@@ -1,9 +1,7 @@
 .nav-container{
-    width: 1300px;
+    width: 1381px;
     height: 101px;
-    margin: 0px 30px 9px 30px;
     box-shadow: 0px 3px 6px #00000054;
-    border-radius: 37px;
     opacity: 1;
     align-items: center;
     
@@ -11,18 +9,21 @@
 
 .nav-icon{
     align-content: center;
-    margin: 9px 0px 9px 27px;
+    margin: 0px 0px 40px 20px;
     width: 100px;
+    height: 50px;
     color: #fff;
 }
 .nav-logo{
     color: #fff;
+
 }
 
 
 .nav-icon2{
     align-content: center;
-    text-align: center;
+    padding-top: 5px;
+    text-align: left;
     font-style: italic normal 600 23px;
     letter-spacing: 0px;
     color: #FFFFFF;
@@ -34,10 +35,11 @@
 
 .main-menu{
     align-items: center;
+    margin-top: 20px;
     display: flex;
-    font-size: 16px;
+    font-size: 20px;
     font-weight: normal;
-    width: 600px;
+    width: 700px;
     justify-content: space-between;
     a{
         font-style: normal;
