Finished home page layout

--- a/front-web/src/core/components/ButtonMenu/styles.scss
+++ b/front-web/src/core/components/ButtonMenu/styles.scss
@@ -2,12 +2,9 @@
     width: 192px;
     height: 52px;
     margin-left: 80px;
-    background: var(--unnamed-color-f69c00) 0% 0% no-repeat padding-box;
-    background: #F69C00 0% 0% no-repeat padding-box;
-    box-shadow: 0px 3px 6px #00000054;
+    background: #F69C00;
+    box-shadow: 0px 3px 6px;
     border-radius: 34px;
-    opacity: 1;
-    align-items: center;;
 }
 .text-btn-menu{
     width: 170px;
