--- a/front-web/src/core/components/Navbar/styles.scss
+++ b/front-web/src/core/components/Navbar/styles.scss
@@ -24,8 +24,8 @@
     align-content: center;
     padding-top: 5px;
     text-align: left;
-    font-style: italic normal 600 23px;
-    letter-spacing: 0px;
+    font-style: italic;
+    letter-spacing: 2px;
     color: #FFFFFF;
     opacity: 1;
 }
@@ -37,7 +37,7 @@
     align-items: center;
     margin-top: 20px;
     display: flex;
-    font-size: 20px;
+    font-size: 19px;
     font-weight: normal;
     width: 700px;
     justify-content: space-between;
