--- a/front-web/src/App.scss
+++ b/front-web/src/App.scss
@@ -19,3 +19,13 @@
       text-decoration: none;
     }
   }
+ .form-label{
+    margin-top: 30px;
+    margin-left: 30px;
+    text-align: left;
+    font-style: normal;
+    font-size: 15px;
+    letter-spacing: 0px;
+    color: #FFFFFF;
+    opacity: 1;
+}
