finalizing all changes to layouts

--- a/front-web/src/core/components/FormAuth/styles.scss
+++ b/front-web/src/core/components/FormAuth/styles.scss
@@ -1,14 +1,13 @@
 .form-container{
     width: 475px;
-    height: 400px;
-    margin-top: 50px;
+    margin-top: 40px;
     margin-left: 10px;
     box-shadow: 0px 3px 8px #00000087;
     border-radius: 25px;
     background: #69C3F0 0% 0% no-repeat padding-box
 }
-.text-tile{
-    padding-top: 20px;
+.text-title{
+    padding-top: 30px;
     padding-left: 20px;
     text-align: center;
     font-style: italic;
