--- a/front-web/src/core/components/ButtonForm/styles.scss
+++ b/front-web/src/core/components/ButtonForm/styles.scss
@@ -1,15 +1,15 @@
-.btn-men{
+.btn-form{
     width: 200px;
     height:52px;
     background: #FFF;
     margin-left: 23px;
+    box-shadow: 0px 3px 6px;
+    border-radius: 34px;
     
 }
-.btn-text-login{
+.btn-text{
     margin-left: 0PX;
     margin-top: 10px;
     font-size: 18px;
-    font-weight: normal;
-    color: #5D5D5D;
-    
+    font-weight: bold;    
 }
