--- a/front-web/src/core/components/ButtonMenu/styles.scss
+++ b/front-web/src/core/components/ButtonMenu/styles.scss
@@ -5,6 +5,11 @@
     background: #F69C00;
     box-shadow: 0px 3px 6px;
     border-radius: 34px;
+    ::before, ::after{
+        box-sizing: unset;
+    }
+
+    
 }
 .text-btn-menu{
     width: 170px;
