--- a/front-web/src/pages/Auth/Components/Cadastro/styles.scss
+++ b/front-web/src/pages/Auth/Components/Cadastro/styles.scss
@@ -1,3 +1,13 @@
-.form-content{
-    border: 1px solid #000;
+.cadastro-container{
+    .form-container{
+        height: 450px;
+    }
+}
+
+.container-button{
+    margin-top: 20px;
+}
+
+.form-password{
+    display: flex;
 }
