Login and user registration validations implemented, connection between backend and frontend and user feedback using Toosters

--- a/front-web/src/App.scss
+++ b/front-web/src/App.scss
@@ -29,3 +29,8 @@
     color: #FFFFFF;
     opacity: 1;
 }
+
+.textarea:focus, input:focus, select:focus, button:focus{
+  border: 0 none;
+  outline: 0;
+} 
