--- a/front-web/src/pages/Auth/Components/Login/styles.scss
+++ b/front-web/src/pages/Auth/Components/Login/styles.scss
@@ -1,6 +1,6 @@
 .container-login{
     .form-container{
-        height: 400px;
+        height: 450px;
     }
 }
 .form-label{
@@ -66,4 +66,8 @@
     .btn-text{
         color: #5D5D5D;
     }
+}
+
+.alert-text{
+    margin: 20px 150px 0 10px;
 }
